# Enigma_Engine

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  main.zig  shell.nix  test.cpp  test.zig
glsl/: gl_render.frag  main.frag  main.vert
include/: database_manager.h  font_engine.h  gl_widget.h  native_window_manager.h  wasm_manager.h
test/: build.zig  gl_render.cpp  gl_render.vert  gl_test.cpp  main.frag  main.vert  qt_test.cpp  shader.h
